--- a/css/tablette.css
+++ b/css/tablette.css
@@ -67,7 +67,7 @@
   
   .pr15 {
     padding-right: 0px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
   }
 
   footer {
